Closed Bug 1833795 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::ipc::FatalError | mozilla::ipc::IProtocol::HandleFatalError | IPC::ParamTraits<mozilla::dom::ParentToChildInternalResponse>::Write]

Categories

(Core :: DOM: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- wontfix
firefox114 --- wontfix
firefox115 --- fixed

People

(Reporter: RyanVM, Assigned: edenchuang)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file, 1 obsolete file)

New parent process crash signature first appearing in 112.

Crash report: https://crash-stats.mozilla.org/report/index/82e0ef50-aff7-4b75-a3fe-373a50230517

MOZ_CRASH Reason: MOZ_CRASH(IPC FatalError in the parent process!)

Top 10 frames of crashing thread:

0  xul.dll  mozilla::ipc::FatalError  ipc/glue/ProtocolUtils.cpp:170
1  xul.dll  mozilla::ipc::IProtocol::HandleFatalError const  ipc/glue/ProtocolUtils.cpp:402
2  xul.dll  IPC::WriteParam  ipc/chromium/src/chrome/common/ipc_message_utils.h:442
2  xul.dll  IPC::ParamTraits<mozilla::dom::ParentToChildInternalResponse>::Write  ipc/ipdl/FetchTypes.cpp:1570
3  xul.dll  IPC::WriteParam  ipc/chromium/src/chrome/common/ipc_message_utils.h:442
3  xul.dll  mozilla::dom::PFetchParent::SendOnResponseAvailableInternal  ipc/ipdl/PFetchParent.cpp:87
4  xul.dll  mozilla::dom::FetchParent::OnResponseAvailableInternal  dom/fetch/FetchParent.cpp:258
5  xul.dll  mozilla::dom::FetchService::FetchInstance::OnResponseAvailableInternal::<lambda_12>::operator  dom/fetch/FetchService.cpp:338
5  xul.dll  mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/dom/fetch/FetchService.cpp:333:19'>::Run  xpcom/threads/nsThreadUtils.h:549
6  xul.dll  nsThread::ProcessNextEvent  xpcom/threads/nsThread.cpp:1233
IPCFatalErrorMsg unknown variant of union InputStreamParams

Eden, could you take a look?

Flags: needinfo?(echuang)
Keywords: regression
Regressed by: 1351231
Assignee: nobody → echuang
Status: NEW → ASSIGNED
Severity: -- → S3
Flags: needinfo?(echuang)
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by echuang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ffcced3e103d Handle the case that InternalResponse.body/alternativeBody serialization fail. r=dom-worker-reviewers,smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

The patch landed in nightly and beta is affected.
:edenchuang, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox114 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(echuang)
Flags: needinfo?(echuang)

Comment on attachment 9340263 [details]
Bug 1833795 - Checking nsIGlobalObject::IsDying() before dispatching Notification Event on Worker. r=#dom-worker-reviewers

Revision D181629 was moved to bug 1839231. Setting attachment 9340263 [details] to obsolete.

Attachment #9340263 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: