Bug 1833795 - Handle the case that InternalResponse.body/alternativeBody serialization fail. r=dom-worker-reviewers,smaug

Differential Revision: https://phabricator.services.mozilla.com/D178788